--- a/index.html
+++ b/index.html
@@ -2,11 +2,22 @@
 <head>
   <meta charset="UTF-8">
   <script>
-    // Required:
-    window.LIVECHAT_CHANNEL_UUID = 'f2456ca1-7e7a-4beb-9f16-313bdd40513a';
-    // Optional, with defaults values:
+    window.LIVECHAT_CHANNEL_UUID = 'aef1bb0d-1b87-4e60-8499-f36f86d8ef09';
     window.TOOKE_API_PUBLIC_URL = 'https://app.tooke.chat';
   </script>
+  <style>
+    :root {
+      --livechat-primary: #F7941E; 
+      --livechat-primary-light: #FED9AE;
+      --livechat-primary-dark: #F7941E;
+      --livechat-secondary: #696667;
+      --livechat-secondary-light: #FED9AE;
+      --livechat-link: #F7941E;
+      --livechat-negative: #fe604f;
+      --livechat-avatar-background: #F7941E;
+      --livechat-avatar-background-hover: #004587;
+    }
+  </style>
   <script defer src="https://tooke-widgets.s3.us-east-1.amazonaws.com/tooke-live-chat.min.js" ></script>
 </head>
 <body>
