--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
   <script>
     window.LIVECHAT_CHANNEL_UUID = 'aef1bb0d-1b87-4e60-8499-f36f86d8ef09';
     window.TOOKE_API_PUBLIC_URL = 'https://app.tooke.chat';
+    window.LIVECHAT_AVATAR_ICON = 'https://www.svgrepo.com/download/134581/whatsapp.svg';
+    window.LIVECHAT_AVATAR_ICON_WIDTH = 50
+    window.LIVECHAT_AVATAR_ICON_HEIGHT = 50
+    window.LIVECHAT_TITLE = 'Senac MG'
+    window.LIVECHAT_LOGO_ICON = 'https://www.svgrepo.com/download/134581/whatsapp.svg'
   </script>
   <style>
     :root {
@@ -14,8 +19,8 @@
       --livechat-secondary-light: #FED9AE;
       --livechat-link: #F7941E;
       --livechat-negative: #fe604f;
-      --livechat-avatar-background: #F7941E;
-      --livechat-avatar-background-hover: #004587;
+      --livechat-avatar-background: transparent;
+      --livechat-avatar-background-hover: transparent;
     }
   </style>
   <script defer src="https://tooke-widgets.s3.us-east-1.amazonaws.com/tooke-live-chat.min.js" ></script>
