--- a/index.html
+++ b/index.html
@@ -1,29 +1,32 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <script>
-    window.LIVECHAT_CHANNEL_UUID = 'aef1bb0d-1b87-4e60-8499-f36f86d8ef09';
-    window.TOOKE_API_PUBLIC_URL = 'https://app.tooke.chat';
-    window.LIVECHAT_AVATAR_ICON = 'https://www.svgrepo.com/download/134581/whatsapp.svg';
-    window.LIVECHAT_AVATAR_ICON_WIDTH = 50
-    window.LIVECHAT_AVATAR_ICON_HEIGHT = 50
-    window.LIVECHAT_TITLE = 'Senac MG'
-    window.LIVECHAT_LOGO_ICON = 'https://www.svgrepo.com/download/134581/whatsapp.svg'
-  </script>
-  <style>
-    :root {
-      --livechat-primary: #F7941E; 
-      --livechat-primary-light: #FED9AE;
-      --livechat-primary-dark: #F7941E;
-      --livechat-secondary: #696667;
-      --livechat-secondary-light: #FED9AE;
-      --livechat-link: #F7941E;
-      --livechat-negative: #fe604f;
-      --livechat-avatar-background: transparent;
-      --livechat-avatar-background-hover: transparent;
-    }
-  </style>
-  <script defer src="https://tooke-widgets.s3.us-east-1.amazonaws.com/tooke-live-chat.min.js" ></script>
+    <script>
+      window.TOOKE_API_PUBLIC_URL = 'https://app.tooke.chat';
+      window.LIVECHAT_CHANNEL_UUID = 'aef1bb0d-1b87-4e60-8499-f36f86d8ef09';
+      window.LIVECHAT_AVATAR_ICON_WIDTH = 70
+      window.LIVECHAT_AVATAR_ICON = 'https://www.svgrepo.com/download/134581/whatsapp.svg';
+      window.LIVECHAT_AVATAR_ICON_HEIGHT = 70
+      window.LIVECHAT_TITLE = 'Senac MG'
+      window.LIVECHAT_LOGO_ICON = 'https://www.svgrepo.com/download/134581/whatsapp.svg'
+      window.LIVECHAT_BACKGROUND_URL = 'https://i.pinimg.com/736x/8c/98/99/8c98994518b575bfd8c949e91d20548b.jpg'
+    </script>
+
+    <style>
+      :root {
+        --livechat-primary: #f7941e;
+        --livechat-primary-light: #f5cc99;
+        --livechat-primary-dark: #f7a64b;
+        --livechat-secondary: #696667;
+        --livechat-secondary-light: #e9e9e9;
+        --livechat-link: #f7941e;
+        --livechat-negative: #eb1700;
+        --livechat-avatar-background: transparent;
+        --livechat-avatar-background-hover: transparent;
+      }
+    </style>
+
+    <script defer src="https://tooke-widgets.s3.us-east-1.amazonaws.com/tooke-live-chat.min.js"></script>
 </head>
 <body>
 </body>
