--- a/index.html
+++ b/index.html
@@ -2,30 +2,32 @@
 <head>
   <meta charset="UTF-8">
     <script>
-      window.TOOKE_API_PUBLIC_URL = 'https://app.tooke.chat';
-      window.LIVECHAT_CHANNEL_UUID = 'aef1bb0d-1b87-4e60-8499-f36f86d8ef09';
-      window.LIVECHAT_AVATAR_ICON_WIDTH = 70
-      window.LIVECHAT_AVATAR_ICON = 'https://www.svgrepo.com/download/134581/whatsapp.svg';
-      window.LIVECHAT_AVATAR_ICON_HEIGHT = 70
-      window.LIVECHAT_TITLE = 'Senac MG'
-      window.LIVECHAT_LOGO_ICON = 'https://www.svgrepo.com/download/134581/whatsapp.svg'
-      window.LIVECHAT_BACKGROUND_URL = 'https://i.pinimg.com/736x/8c/98/99/8c98994518b575bfd8c949e91d20548b.jpg'
+      window.TOOKE_API_PUBLIC_URL = 'https://acn-vale.evolux.cx';
+      window.LIVECHAT_CHANNEL_UUID = '7eaa2fd4-5448-4426-a767-a0a58528f65e';
+      window.LIVECHAT_AVATAR_ICON_WIDTH = 50
+      window.LIVECHAT_AVATAR_ICON = 'https://raw.githubusercontent.com/hamiltonreis/evoluxchat_2/main/vale-logo_601ff25d9f6ff.png';
+      window.LIVECHAT_AVATAR_ICON_HEIGHT = 50;
+      window.LIVECHAT_TITLE = 'Vale';
+      window.LIVECHAT_LOGO_ICON = 'https://raw.githubusercontent.com/hamiltonreis/evoluxchat_2/main/vale-logo_601ff25d9f6ff.png';
+      window.LIVECHAT_HEADER_LOGO_WIDTH = 30;
+      window.LIVECHAT_HEADER_LOGO_HEIGHT = 30;
+      window.LIVECHAT_BACKGROUND_MESSAGES_ONLY = true;
     </script>
-
+    
     <style>
       :root {
-        --livechat-primary: #f7941e;
-        --livechat-primary-light: #f5cc99;
-        --livechat-primary-dark: #f7a64b;
+        --livechat-primary: #00bbd3;
+        --livechat-primary-light: #e6f8fb;
+        --livechat-primary-dark: #0096a9;
         --livechat-secondary: #696667;
         --livechat-secondary-light: #e9e9e9;
-        --livechat-link: #f7941e;
-        --livechat-negative: #eb1700;
+        --livechat-link: #0096a9;
+        --livechat-negative: #fe604f;
         --livechat-avatar-background: transparent;
         --livechat-avatar-background-hover: transparent;
       }
     </style>
-
+    
     <script defer src="https://tooke-widgets.s3.us-east-1.amazonaws.com/tooke-live-chat.min.js"></script>
 </head>
 <body>
